[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hxdecode"
version = "0.1.0"
description = "Decoder for Microsoft Outlook for Mac HxStore.hxd binary database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mitchell Johnson" },
]
keywords = ["outlook", "macos", "hxstore", "email", "forensics", "binary"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: System :: Recovery Tools",
    "Topic :: Utilities",
]
dependencies = ["click", "lz4"]

[project.urls]
Repository = "https://github.com/mitchelljohnson3/hxstore-decode"

[project.scripts]
hxdecode = "hxdecode.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
